[gd_scene load_steps=13 format=2]

[ext_resource path="res://source/Game.gd" type="Script" id=1]
[ext_resource path="res://sounds/a11.ogg" type="AudioStream" id=2]
[ext_resource path="res://graphics/terrain/scenario_concept.png" type="Texture" id=3]
[ext_resource path="res://source/tilesets/TileSet.tres" type="TileSet" id=4]
[ext_resource path="res://source/Grid.gd" type="Script" id=5]
[ext_resource path="res://source/interface/DangerLevelBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/interface/EnergyBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://graphics/interface/push_skill.png" type="Texture" id=8]
[ext_resource path="res://source/interface/UnitButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://graphics/units/kaiju_plant.png" type="Texture" id=10]
[ext_resource path="res://graphics/units/power_collector.png" type="Texture" id=11]
[ext_resource path="res://graphics/units/survivors.png" type="Texture" id=12]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Background" type="CanvasLayer" parent="." index="1"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 768.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="ColorRect" type="ColorRect" parent="Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_right = 768.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.627451 )

[node name="ColorRect2" type="ColorRect" parent="Background" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.627451 )

[node name="Grid" type="TileMap" parent="." index="2"]

position = Vector2( 128, 0 )
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 3, 0, 3, 3, 0, 65536, 1, 0, 65537, 1, 0, 65538, 3, 0, 65539, 3, 0, 131072, 5, 0, 131073, 5, 0, 131074, 7, 0, 131075, 7, 0, 196608, 5, 0, 196609, 5, 0, 196610, 7, 0, 196611, 7, 0 )
script = ExtResource( 5 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="Units" type="Node2D" parent="." index="3"]

[node name="Interface" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Quadrant1" type="Control" parent="Interface" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 168.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="DangerLevelBar" parent="Interface/Quadrant1" index="0" instance=ExtResource( 6 )]

margin_left = 1.0
margin_top = 192.0
margin_right = 41.0
margin_bottom = 232.0
_sections_unfolded = [ "Rect" ]

[node name="Quadrant2" type="Control" parent="Interface" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_right = 424.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="DangerLevelBar" parent="Interface/Quadrant2" index="0" instance=ExtResource( 6 )]

margin_left = 1.0
margin_top = 192.0
margin_right = 41.0
margin_bottom = 232.0
_sections_unfolded = [ "Rect" ]

[node name="Quadrant3" type="Control" parent="Interface" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 256.0
margin_right = 424.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="DangerLevelBar" parent="Interface/Quadrant3" index="0" instance=ExtResource( 6 )]

margin_left = 1.0
margin_top = 192.0
margin_right = 41.0
margin_bottom = 232.0
_sections_unfolded = [ "Rect" ]

[node name="Quadrant4" type="Control" parent="Interface" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 256.0
margin_right = 168.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="DangerLevelBar" parent="Interface/Quadrant4" index="0" instance=ExtResource( 6 )]

margin_left = 1.0
margin_top = 192.0
margin_right = 41.0
margin_bottom = 232.0
_sections_unfolded = [ "Rect" ]

[node name="EnergyBar" parent="Interface/Quadrant4" index="1" instance=ExtResource( 7 )]

margin_left = -33.0
margin_top = 120.0
margin_right = 7.0
margin_bottom = 255.0
_sections_unfolded = [ "Rect", "Textures" ]

[node name="KaijuSkill" type="Button" parent="Interface" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 442.0
margin_right = 79.0
margin_bottom = 506.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Interface/KaijuSkill" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0

[node name="UnitButtons" type="Control" parent="Interface" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="DoomsdaySurfer" parent="Interface/UnitButtons" index="0" instance=ExtResource( 9 )]

margin_left = 640.0
margin_right = 768.0
margin_bottom = 128.0

[node name="KaijuPlant" parent="Interface/UnitButtons" index="1" instance=ExtResource( 9 )]

margin_left = 640.0
margin_top = 128.0
margin_right = 768.0
margin_bottom = 256.0

[node name="TextureRect" parent="Interface/UnitButtons/KaijuPlant" index="0"]

texture = ExtResource( 10 )

[node name="PowerCollector" parent="Interface/UnitButtons" index="2" instance=ExtResource( 9 )]

margin_left = 640.0
margin_top = 256.0
margin_right = 768.0
margin_bottom = 384.0

[node name="TextureRect" parent="Interface/UnitButtons/PowerCollector" index="0"]

texture = ExtResource( 11 )

[node name="Survivors" parent="Interface/UnitButtons" index="3" instance=ExtResource( 9 )]

margin_left = 640.0
margin_top = 384.0
margin_right = 768.0
margin_bottom = 512.0

[node name="TextureRect" parent="Interface/UnitButtons/Survivors" index="0"]

texture = ExtResource( 12 )


[editable path="Interface/UnitButtons/DoomsdaySurfer"]
[editable path="Interface/UnitButtons/KaijuPlant"]
[editable path="Interface/UnitButtons/PowerCollector"]
[editable path="Interface/UnitButtons/Survivors"]
